--- a/pom.xml
+++ b/pom.xml
@@ -47,25 +47,22 @@
 		</dependency>
 		<!-- localから参照しているライブラリ -->
 		<dependency>
-			<groupId>com.github</groupId>
-			<artifactId>pochi</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/resources/pochi-runner-1.0-SNAPSHOT.jar</systemPath>
+			<groupId>com.github.pochi</groupId>
+			<artifactId>pochi-runner</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.pochi</groupId>
 			<artifactId>kunai2</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/resources/kunai2-1.0-SNAPSHOT.jar</systemPath>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.pochi</groupId>
 			<artifactId>nasubi</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/src/main/resources/nasubi-1.0-SNAPSHOT.jar</systemPath>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -80,7 +77,7 @@
 							<mainClass>mycupid.Main</mainClass>
 							<addClasspath>true</addClasspath>
 							<addExtensions>true</addExtensions>
-							<classpathPrefix></classpathPrefix>
+							<classpathPrefix>lib/</classpathPrefix>
 						</manifest>
 					</archive>
 				</configuration>
@@ -91,7 +88,7 @@
 				<executions>
 					<execution>
 						<id>copy</id>
-						<phase>install</phase>
+						<phase>compile</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
 						</goals>
@@ -99,6 +96,7 @@
 							<outputDirectory>
 								${project.build.directory}/lib
 							</outputDirectory>
+							<includeScope>runtime</includeScope>
 						</configuration>
 					</execution>
 				</executions>
