--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,12 @@
 	<groupId>com.github</groupId>
 	<artifactId>mycupid</artifactId>
 	<version>1.0-SNAPSHOT</version>
-   
+	
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.jline</groupId>
@@ -45,7 +50,6 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.8.6</version>
 		</dependency>
-		<!-- localから参照しているライブラリ -->
 		<dependency>
 			<groupId>com.github.pochi</groupId>
 			<artifactId>pochi-runner</artifactId>
@@ -104,7 +108,8 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
